@@ -6,6 +6,7 @@ Version 6.0.0
 AllOverIt
   * Improvements to IAsyncCommand and AsyncCommandPipeline - now includes a cancellation token
   * Added MemberInfo extension method CreateMemberAccessLambda()
+  * Renamed IsGenericNullableType() to IsNullableType()
 
   * Added compiled property get/set methods GetCompiledPropertyGet() and GetCompiledPropertySet()
                     *******************************************************
